--- a/src/input.css
+++ b/src/input.css
@@ -1,8 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
+  .ubuntu {
+    font-family: "Ubuntu", sans-serif;
+    font-style: normal;
+  }
+
+  .font-jakarta-sans {
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .font-noto-sans {
+    font-family: "Noto Sans JP", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+  }
+
+  /* INDEX */
   @font-face {
     font-family: "NetflixSans-Bold";
     src: url("../public/fonts/NetflixSans-Bold.woff2") format("woff2");
@@ -21,6 +44,10 @@
   @font-face {
     font-family: "NetflixSans-Light";
     src: url("../public/fonts/NetflixSans-Light.woff2") format("woff2");
+  }
+
+  .font-jakarta {
+    font-family: "JakartaSans-Regular";
   }
 
   .font-bold {
